# Ray-Tracer-2.0

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
Ray Tracer 2.0/: Ray Tracer 2.0.sln  Ray Tracer 2.0.vcxproj  Ray Tracer 2.0.vcxproj.filters  camera.h  color.h  hittable.h  hittable_list.h  image.csv  image.ppm  infinite_cone.h  interval.h  main.c  main.cpp  makefile  material.h  ray.h  rtproject.h  sphere.h  vec3.h
src/: camera.h  camera_simd.h  color.h  cone.h  hittable.h  hittable_list.h  infinite_cone.h  interval.h  main.cpp  material.h  plane.h  ray.h  rtproject.h  simd.h  simd_hittable.h  simd_sse_math.h  sphere.h  vec3.h
src/simd/: aligned_array.cpp  aligned_array.h  hardware_support.h  simd_sse_fma_math.h  simd_sse_math_wrapped.h
src/simd/SSE/: Col3_sse.h  Quadratic_sse.h  Ray3_sse.h  Vec3_sse.h
